src/test/deca/context/invalid/SansObjet/DeclVar-And-float-float-int.deca
// Description:
//    Declaration of a float variable using && operation between a float variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  0.1; 
    int y = 17; 
    float z = 0.1 && 17; 
}
